[gd_scene load_steps=5 format=2]

[ext_resource path="res://graphics/icons/menu-down.svg" type="Texture" id=1]
[ext_resource path="res://graphics/icons/menu-up.svg" type="Texture" id=2]
[ext_resource path="res://tools/resource_pack_editor/skin_editor/AnimatedTextureFrameEditor.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.12549, 0.145098, 0.192157, 1 )

[node name="AnimatedTextureFrameEditor" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1046.0
rect_min_size = Vector2( 0, 200 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 1910.0
margin_bottom = 190.0

[node name="FrameLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
margin_top = 83.0
margin_bottom = 97.0
valign = 1

[node name="FrameRect" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 4.0
margin_right = 381.0
margin_bottom = 180.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
expand = true
stretch_mode = 6

[node name="FilenameLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 385.0
margin_top = 83.0
margin_right = 385.0
margin_bottom = 97.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 389.0
margin_right = 1900.0
margin_bottom = 180.0
size_flags_horizontal = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 1511.0
margin_bottom = 105.0
size_flags_horizontal = 3
alignment = 2

[node name="ButtonUp" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 1357.0
margin_right = 1393.0
margin_bottom = 30.0
rect_min_size = Vector2( 20.29, 0 )
hint_tooltip = "Move frame down"
icon = ExtResource( 2 )

[node name="ButtonDown" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 1397.0
margin_right = 1433.0
margin_bottom = 30.0
rect_min_size = Vector2( 20.29, 0 )
hint_tooltip = "Move frame up"
icon = ExtResource( 1 )

[node name="DelaySpinbox" type="SpinBox" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 1437.0
margin_right = 1511.0
margin_bottom = 30.0
hint_tooltip = "Delay"
step = 0.0
allow_greater = true
suffix = "s"
arrow_step = 0.01
